Correct the underline on safari

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -309,7 +309,10 @@ header {
 
 
     .active {
-        text-decoration: underline 3px $blueUnderscore;
+        text-decoration-line: underline;
+        text-decoration-color: $blueUnderscore;
+        text-decoration-style: solid 3px;
+        text-decoration-thickness: 3px;
         text-underline-offset: 5px;
     }
     
