--- a/styles/style.css
+++ b/styles/style.css
@@ -450,8 +450,13 @@ header .menu-active {
     transition: transform .5s, -webkit-transform .5s;
   }
   .active {
-    -webkit-text-decoration: underline 3px #22A0E7;
-            text-decoration: underline 3px #22A0E7;
+    -webkit-text-decoration-line: underline;
+            text-decoration-line: underline;
+    -webkit-text-decoration-color: #22A0E7;
+            text-decoration-color: #22A0E7;
+    -webkit-text-decoration-style: solid 3px;
+            text-decoration-style: solid 3px;
+    text-decoration-thickness: 3px;
     text-underline-offset: 5px;
   }
   .modal-download {
